--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,25 @@
 {
-    "env": {
-      "browser": true,
-      "es6": true,
-      "jest": true
-    },
-    "parser": "babel-eslint",
-    "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module"
-    },
-    "extends": ["airbnb-base"],
-    "rules": {
-      "no-shadow": "off",
-      "no-param-reassign": "off",
-      "no-unused-vars": "off",
-      "no-use-before-define":"off",
-      "eol-last": "off",
-      "camelcase": ["error", { "properties": "never" }],
-      "import/extensions": [
-        1,
-        {
-          "js": "always",
-          "json": "always"
-        }
-      ]
-    },
-    "ignorePatterns": ["dist/", "build/"]
-  }
-  
+  "env": {
+    "browser": true,
+    "es6": true,
+    "jest": true
+  },
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "extends": ["airbnb-base"],
+  "rules": {
+    "no-shadow": "off",
+    "no-param-reassign": "off",
+    "eol-last": "off",
+    "import/extensions": [ 1, {
+      "js": "always", "json": "always"
+    }]
+  },
+  "ignorePatterns": [
+    "dist/",
+    "build/"
+  ]
+}
